Fix text spacing issues.

--- a/sass/parts/_article.scss
+++ b/sass/parts/_article.scss
@@ -1,3 +1,5 @@
+$article-default-margin: 1em;
+
 article{
   border-bottom: 1px solid $color-gray04;
   padding: 30px 0;
@@ -34,7 +36,7 @@ article{
     -moz-transform: scale(1.3);
   }
   .entry-content{
-    line-height: 2;
+    line-height: 1.6;
     text-align: justify;
     a{
       &:hover{
@@ -55,7 +57,7 @@ article{
       }
     }
     p, blockquote, ul, ol, dl, table, iframe, h1, h2, h3, h4, h5, h6, .video-container{
-      margin-top: 10px;
+      margin-top: $article-default-margin;
     }
     ul, ol, dl{
       margin-left: 20px;
@@ -70,7 +72,7 @@ article{
       font-style: italic;
     }
     p{
-      margin-top: 10px;
+      margin-top: $article-default-margin;
     }
     h2{
       font-weight: 300;
@@ -115,7 +117,7 @@ article{
       background: rgba($color-gray04, 0.5);
       border-left: 5px solid rgba($color-gray03, 0.6);
       padding: 15px 20px;
-      margin-top: 10px;
+      margin-top: $article-default-margin;
       & > p:first-of-type{
         margin-top: 0;
       }
@@ -127,7 +129,7 @@ article{
       background: transparent;
       border: 1px solid $color-gray03;
       border-spacing: 0;
-      margin-top: 10px;
+      margin-top: $article-default-margin;
       th{
         background: $color-gray03;
         padding: 0 15px;
