--- a/sass/parts/_syntax.scss
+++ b/sass/parts/_syntax.scss
@@ -73,7 +73,7 @@ article{
 figure.code{
   background: rgba($color-gray04, 0.5);
   border: 1px solid $pre-border;
-  margin-top: 10px;
+  margin-top: 1em;
   padding: 5px 15px;
   @include border-radius(5px);
   figcaption{
